--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^14.14.10",
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
