--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
-    "type": "postgres",
+    "type": "mysql",
     "host": "localhost",
-    "port": 5432,
-    "username": "postgres",
-    "password": "1739",
+    "port": 3306,
+    "username": "admin",
+    "password": "",
     "database": "pet_life",
     "entities": [
        "src/database/entity/*.ts"
